adding userAuth
