# swagger.json
@@ -8,6 +8,18 @@
     "host": "localhost:3000",
     "basePath": "/",
     "schemes": ["http"],
+    "securityDefinitions": {
+      "Bearer": {
+        "type": "apiKey",
+        "name": "Authorization",
+        "in": "header"
+      }
+    },
+    "security": [
+      {
+        "Bearer": []
+      }
+    ],
     "paths": {
       "/todos": {
         "get": {
@@ -35,6 +47,7 @@
             {
               "in": "body",
               "name": "task",
+              "required": true,
               "schema": {
                 "type": "object",
                 "properties": {
@@ -56,7 +69,13 @@
         "get": {
           "summary": "Retrieve a task by ID",
           "parameters": [
-            { "in": "path", "name": "id", "type": "integer", "required": true }
+            {
+              "in": "path",
+              "name": "id",
+              "type": "integer",
+              "required": true,
+              "description": "ID of the task to retrieve"
+            }
           ],
           "responses": {
             "200": {
@@ -70,16 +89,25 @@
                 }
               }
             },
-            "404": { "description": "Task not found" }
+            "404": {
+              "description": "Task not found"
+            }
           }
         },
         "put": {
           "summary": "Update a task",
           "parameters": [
-            { "in": "path", "name": "id", "type": "integer", "required": true },
+            {
+              "in": "path",
+              "name": "id",
+              "type": "integer",
+              "required": true,
+              "description": "ID of the task to update"
+            },
             {
               "in": "body",
               "name": "task",
+              "required": true,
               "schema": {
                 "type": "object",
                 "properties": {
@@ -90,18 +118,32 @@
             }
           ],
           "responses": {
-            "200": { "description": "Task updated" },
-            "404": { "description": "Task not found" }
+            "200": {
+              "description": "Task updated"
+            },
+            "404": {
+              "description": "Task not found"
+            }
           }
         },
         "delete": {
           "summary": "Delete a task",
           "parameters": [
-            { "in": "path", "name": "id", "type": "integer", "required": true }
+            {
+              "in": "path",
+              "name": "id",
+              "type": "integer",
+              "required": true,
+              "description": "ID of the task to delete"
+            }
           ],
           "responses": {
-            "204": { "description": "Task deleted" },
-            "404": { "description": "Task not found" }
+            "204": {
+              "description": "Task deleted"
+            },
+            "404": {
+              "description": "Task not found"
+            }
           }
         }
       }
